<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowTool5Data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeading"
            android:text="Physical Activity"
            android:layout_gravity="center"
            android:theme="@style/TextViewHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linear_PA_contact"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="Contact Sim:" />
            <TextView
                android:id="@+id/pcontact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:theme="@style/TextView"
                android:text="contact" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_PA_Q1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:layout_marginTop="25dp"
                android:text="@string/PhysicalActivityQ1" />
            <TextView
                android:id="@+id/tv_PA_Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ1" />
            <TextView
                android:id="@+id/tv_PA_Q1_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ1" />
        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q1"
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </View>

        <LinearLayout
            android:id="@+id/linear_PA_Q2"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="@string/PhysicalActivityQ2" />
            <TextView
                android:id="@+id/tv_PA_Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ2" />

        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q2"
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </View>

        <LinearLayout
            android:id="@+id/linear_PA_Q3"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="@string/PhysicalActivityQ3" />
            <TextView
                android:id="@+id/tv_PA_Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ3" />
            <TextView
                android:id="@+id/tv_PA_Q3_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ3" />

        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q3"
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </View>

        <LinearLayout
            android:id="@+id/linear_PA_Q4"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="@string/PhysicalActivityQ4" />
            <TextView
                android:id="@+id/tv_PA_Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ4" />

        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q4"
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </View>

        <LinearLayout
            android:id="@+id/linear_PA_Q5"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="@string/PhysicalActivityQ5" />
            <TextView
                android:id="@+id/tv_PA_Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ5" />
            <TextView
            android:id="@+id/tv_PA_Q5_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/TextView"
            android:text="@string/PhysicalActivityQ5" />

        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q5"
            android:layout_width="match_parent"
            android:layout_height="25dp">
        </View>

        <LinearLayout
            android:id="@+id/linear_PA_Q6"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextViewHeading"
                android:text="@string/PhysicalActivityQ6" />
            <TextView
                android:id="@+id/tv_PA_Q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/TextView"
                android:text="@string/PhysicalActivityQ6" />

        </LinearLayout>

        <View
            android:id="@+id/view_PA_Q6"
            android:layout_width="match_parent"
            android:layout_height="30dp">
        </View>

        <Button
            android:id="@+id/nextTool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="Next"
            android:theme="@style/Button" />
    </LinearLayout>



</ScrollView>